--- a/src/sections/WorkExperience/WorkExperience.module.css
+++ b/src/sections/WorkExperience/WorkExperience.module.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 100px;
+  padding: 100px 0;
   box-sizing: border-box;
 }
 
@@ -35,11 +35,7 @@
   flex-direction: column;
 }
 
-.LogoBarContainer{
-  margin-top: 100px;
-  margin-left: -100px;
 
-}
 
 @media (max-width: 820px) {
   .WorkExperienceContainer {
@@ -60,11 +56,5 @@
 
   .Title span {
     font-size: 21px;
-  }
-
-  .LogoBarContainer{
-    margin-top: 50px;
-    margin-left: 0px;
-  
   }
 }
